Upgrade manual canvas for rapid freeform editing
